# streamlit-coleta-aovivo

./: .pre-commit-config.yaml  app.py  arquivo_todo_ruim.py  pyproject.toml
